--- a/style.css
+++ b/style.css
@@ -15,3 +15,12 @@ body{
   .contact{
     padding-bottom: 50px;
   }
+  .co{
+      padding-bottom: 50px;
+      font-family: monospace;
+      font-size: 5em; ;
+  }
+  .porto{
+    font-family: monospace;
+    font-size: 15rem; ;
+}
